# elklog

./: .gitmodules  CMakeLists.txt  HISTORY.md  README.md  bitbucket-pipelines.yml
examples/: CMakeLists.txt  direct_logging.cpp  logging.h  main.cpp  options.h  static_logging.cpp
include/elklog/: elk_logger.h  log_return_code.h  rtlogger.h  rtloglevel.h  rtlogmessage.h  spinlock.h  static_logger.h
libs/mylib/: CMakeLists.txt
libs/mylib/include/: mylib.h
libs/mylib/src/: mylib.cpp
src/: elklog.cpp  logging.cpp  logging.h  main.cpp  options.h
test/: CMakeLists.txt
test/performancetests/: CMakeLists.txt  rt_log_performance.cpp
test/unittests/: elklog_test.cpp  rtlogmessage_test.cpp
